@@ -1254,3 +1254,4 @@ seen. gmtime warning still there
 - Cosmetic fix for /setident, found by juli ..
 - Implimented a dynamic hooktype system to allow modules to create their own hooktypes
 - Fixed a conf_unknown bug
+- Added EXLIBS= to make custommodule so a module can specify additional libraries it needs
